# This file contains packaging information for ``setuptools``.
[metadata]
name = pn-tp-pb-downloader
version = 0.3.0
author = soobrakay
author_email = Soobrakay@users.noreply.github.com
description = Downloads precision nutrition, talkpython, or pythonbytes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Soobrakay
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
install_requires =
    beautifulsoup4
    click
    more-itertools
    requests
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    downloader = downloader:cli

[options.packages.find]
where = src
